# SymbolicDSGE

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  _tmp_nonlinear_obs.yaml  empirical_comparison.ipynb  evaluation.html  local_publish.py  mkdocs.yml  model_test.ipynb  mypy.ini  param_estimation.ipynb  pre-release  pyproject.toml  setup.py  sr_test.py  test.ipynb  versions.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report-website.md  feature-request-website.md  feature_request.md
.github/workflows/: cfunc-abi.yml  pre-commit.yml  publish.yml  tests-and-badges.yml  ui-build.yml
0.1.7/: 404.html  index.html  sitemap.xml
0.1.7/installation/: index.html
0.1.7/search/: search_index.json
0.1.8/: 404.html  index.html  sitemap.xml  tags.json
0.1.8/contact/: index.html
0.1.8/installation/: index.html
0.1.8/search/: search_index.json
0.1.9/: 404.html  index.html  sitemap.xml
0.1.9/contact/: index.html
0.1.9/installation/: index.html
0.1.9/search/: search_index.json
0.2.0/: 404.html  index.html  robots.txt  sitemap.xml  tags.json
0.2.0/contact/: index.html
0.2.0/installation/: index.html
0.2.0/search/: search_index.json
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/assets/: test.yaml
0.2.1/contact/: index.html
0.2.1/installation/: index.html
0.2.1/search/: search_index.json
0.2.2/: 404.html  index.html  robots.txt  sitemap.xml  tags.json
0.2.2/contact/: index.html
0.2.2/installation/: index.html
0.2.2/search/: search_index.json
0.5.0/: 404.html  index.html  sitemap.xml  tags.json
0.5.0/assets/: param_estimation.ipynb
0.5.0/contact/: index.html
0.5.0/installation/: index.html
0.5.0/search/: search_index.json
0.5.1/: 404.html  index.html  sitemap.xml
0.5.1/contact/: index.html
0.5.1/installation/: index.html
0.5.1/search/: search_index.json
0.5.2/: 404.html  index.html  sitemap.xml
0.5.2/contact/: index.html
0.5.2/installation/: index.html
0.5.2/search/: search_index.json
0.5.3/: 404.html  index.html  sitemap.xml  tags.json
0.5.3/contact/: index.html
0.5.3/installation/: index.html
1.0.0/: 404.html  index.html  sitemap.xml  tags.json
1.0.0/contact/: index.html
1.0.0/contributing/: index.html
1.0.0/installation/: index.html
1.0.0/search/: search_index.json
1.0.1/: 404.html  index.html  sitemap.xml
1.0.1/contact/: index.html
1.0.1/contributing/: index.html
1.0.1/installation/: index.html
1.0.1/search/: search_index.json
1.1.0/: 404.html  index.html  sitemap.xml
1.1.0/contact/: index.html
1.1.0/contributing/: index.html
1.1.0/installation/: index.html
1.1.0/search/: search_index.json
1.2.0dev0/: 404.html  index.html  robots.txt  sitemap.xml
1.2.0dev0/contact/: index.html
1.2.0dev0/contributing/: index.html
1.2.0dev0/installation/: index.html
1.2.0dev0/search/: search_index.json
1.2.0dev1/: 404.html  index.html  sitemap.xml  tags.json
1.2.0dev1/contact/: index.html
1.2.0dev1/contributing/: index.html
1.2.0dev1/installation/: index.html
1.2.0dev1/search/: search_index.json
1.3.0/: 404.html  index.html  sitemap.xml  tags.json
1.3.0/assets/: param_estimation.ipynb
1.3.0/contact/: index.html
1.3.0/contributing/: index.html
1.3.0/installation/: index.html
1.3.0/search/: search_index.json
1.3.1/: 404.html  index.html  sitemap.xml  tags.json
1.3.1/assets/: guide_notebook.ipynb  monte_carlo.ipynb
1.3.1/contact/: index.html
1.3.1/contributing/: index.html
1.3.1/installation/: index.html
1.3.1/search/: search_index.json
1.3.2/: 404.html  index.html  sitemap.xml
1.3.2/assets/: monte_carlo.ipynb
1.3.2/contact/: index.html
1.3.2/contributing/: index.html
1.3.2/installation/: index.html
1.3.2/search/: search_index.json
1.3.3/: 404.html  index.html  sitemap.xml  tags.json
1.3.3/assets/: monte_carlo.ipynb
1.3.3/contact/: index.html
1.3.3/contributing/: index.html
1.3.3/installation/: index.html
1.3.3/search/: search_index.json
1.3.4/: 404.html  index.html  sitemap.xml
1.3.4/assets/: param_estimation.ipynb
1.3.4/contact/: index.html
1.3.4/contributing/: index.html
1.3.4/installation/: index.html
1.4.0/: 404.html  index.html  sitemap.xml  tags.json
1.4.0/contact/: index.html
1.4.0/contributing/: index.html
1.4.0/gui_usage/: index.html
1.4.0/installation/: index.html
1.4.0/search/: search_index.json
1.4.1/: 404.html  index.html  sitemap.xml  tags.json
1.4.1/contact/: index.html
1.4.1/contributing/: index.html
1.4.1/gui_usage/: index.html
1.4.1/installation/: index.html
1.4.1/search/: search_index.json
1.4.2/: 404.html  index.html  sitemap.xml  tags.json
1.4.2/assets/: monte_carlo.ipynb
1.4.2/contact/: index.html
1.4.2/contributing/: index.html
1.4.2/gui_usage/: index.html
1.4.2/installation/: index.html
1.4.2/portable_experiments/: index.html
1.4.2/search/: search_index.json
1.4.3/: 404.html  index.html  sitemap.xml
1.4.3/assets/: monte_carlo.ipynb
1.4.3/contact/: index.html
1.4.3/contributing/: index.html
1.4.3/gui_usage/: index.html
1.4.3/installation/: index.html
1.4.3/portable_experiments/: index.html
2.0.0.dev1/: 404.html  index.html  sitemap.xml  tags.json
2.0.0.dev1/assets/: monte_carlo.ipynb
2.0.0.dev2/: 404.html  index.html  sitemap.xml  tags.json
2.0.0.dev3/: 404.html  index.html  sitemap.xml
2.0.0.dev4/: 404.html  index.html  sitemap.xml  tags.json
MODELS/: POST82.yaml  linearization_test.yaml  test.yaml
SymbolicDSGE/: __init__.py  _native_dispatch.py  custom_op.py  kalman.py  kalman_config.py  math_utils.py  model_config.py  model_parser.py  shock_generators.py  solver.py
docs/: contact.md  contributing.md  index.md  installation.md  robots.txt
hook_scripts/: check_env.py  check_version_match.py
scripts/: bench_native_neldermead.py  bench_native_objective.py  bench_native_optimizer.py  bench_point_estimation.py  build_frontend.py  model_test.ipynb  param_estimation.ipynb  param_estimation.py
sdsge-ui/: README.md
tests/: conftest.py  test_custom_op.py
(+1975 files in other folders)
