[project]
name = "SymbolicDSGE"
version = "1.2.0dev1"
description = "A diagnostic symbolic adjustment layer for simple DSGE models. Features a built-in linearized DSGE engine constructed from symbolic expressions. Functionality is included to regress on measurement equations with symbolic function discovery using Kalman Filter innovations. The library is designed to be a diagnostic tool to provide isight into potential model misspecifications through said mesaurement regressions."
authors = [
    {name = "Ege Güney Kıymaç", email = "guneykiymac@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numba>=0.62.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pysr>=1.5.9",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
    "statsmodels>=0.14.6",
    "sympy>=1.14.0",
]

[project.urls]
Documentation = "https://gongjr0.github.io/SymbolicDSGE/"
Repository = "https://github.com/GongJr0/SymbolicDSGE"

[project.optional-dependencies]
fred = [
    "fredapi>=0.5.2",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "black[jupyter]>=25.11.0",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "types-pyyaml>=6.0.12.20250915",
    "scipy-stubs>=1.16.3.2",
    "pandas-stubs>=2.3.3.251201",
    "matplotlib-stubs>=0.3.11",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "tabulate>=0.9.0",
    "mike>=2.1.3",
    "python-dotenv>=1.2.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
    "jupyter>=1.1.1",
    "jupytext>=1.19.1",
    "pip>=26.0.1",
]

[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
SymbolicDSGE = {path = "SymbolicDSGE"}

[tool.setuptools.packages.find]
where = ["."]
