[project]
name = "SymbolicDSGE"
version = "1.3.4"
description = """
A diagnostic suite for linear DSGE models with a custom backend supporting symbolic manipulation.
Features a built-in linearized DSGE engine constructed from symbolic expressions.
Functionality is included to support a novel approach to address measurement misspecification through regression on Kalman Filter innovations.
"""
authors = [
    {name = "Ege Güney Kıymaç", email = "guneykiymac@gmail.com"}
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["DSGE", "symbolic", "measurement augmentation", "misspecification", "model diagnostics", "Kalman Filter", "function discovery", "Monte Carlo"]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "numba>=0.62.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
    "statsmodels>=0.14.6",
    "sympy>=1.14.0",
]

[project.urls]
Documentation = "https://gongjr0.github.io/SymbolicDSGE/"
Repository = "https://github.com/GongJr0/SymbolicDSGE"

[project.scripts]
sdsge-ui = "SymbolicDSGE.ui.cli:main"

[project.optional-dependencies]
fred = [
    "fredapi>=0.5.2",
    "python-dotenv>=1.2.1",
]
sr = [
    "pysr>=1.5.10",
]
ui = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "black[jupyter]>=25.11.0",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "types-pyyaml>=6.0.12.20250915",
    "scipy-stubs>=1.16.3.2",
    "pandas-stubs>=2.3.3.251201",
    "matplotlib-stubs>=0.3.11",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "tabulate>=0.9.0",
    "mike>=2.1.3",
    "python-dotenv>=1.2.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
    "jupyter>=1.1.1",
    "jupytext>=1.19.1",
    "pip>=26.0.1",
    "jupyterlab-execute-time>=3.3.0",
    "httpx2>=2.3.0",
]

[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["SymbolicDSGE*"]

[tool.setuptools.package-data]
"SymbolicDSGE.ui" = ["_static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--import-mode=importlib"
