[project]
name = "SymbolicDSGE"
version = "2.0.0.dev4"
description = """
A diagnostic suite for linear DSGE models with a custom backend supporting symbolic manipulation.
Features a built-in linearized DSGE engine constructed from symbolic expressions.
Functionality is included to support a novel approach to address measurement misspecification through regression on Kalman Filter innovations.
"""
authors = [
    {name = "Ege Güney Kıymaç", email = "guneykiymac@gmail.com"}
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["DSGE", "symbolic", "measurement augmentation", "misspecification", "model diagnostics", "Kalman Filter", "function discovery", "Monte Carlo"]
requires-python = ">=3.11"
dependencies = [
    "cloudpickle>=3.1.2",
    "matplotlib>=3.11.1",
    "numba>=0.62.1,!=0.66.0",  # 0.66.0 cp311 wheel does not ship stubs for Windows.
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "parquet-engine>=0.1.2",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
    "statsmodels>=0.14.6",
    "sympy>=1.14.0",
]

[project.urls]
Documentation = "https://gongjr0.github.io/SymbolicDSGE/"
Repository = "https://github.com/GongJr0/SymbolicDSGE"

[project.scripts]
sdsge-ui = "SymbolicDSGE.ui.cli:main"
sdsge-compile = "SymbolicDSGE.bundle.cli:main_compile"
sdsge-decompile = "SymbolicDSGE.bundle.cli:main_decompile"

[project.optional-dependencies]
fred = [
    "fredapi>=0.5.2",
    "python-dotenv>=1.2.1",
]
sr = [
    "pysr>=1.5.10",
]
ui = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "black[jupyter]>=25.11.0",
    "cython>=3.2.6",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "types-pyyaml>=6.0.12.20250915",
    "scipy-stubs>=1.16.3.2",
    "pandas-stubs>=2.3.3.251201",
    "matplotlib-stubs>=0.3.11",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.7",
    "tabulate>=0.9.0",
    "mike>=2.1.3",
    "python-dotenv>=1.2.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
    "jupyter>=1.1.1",
    "jupytext>=1.19.1",
    "pip>=26.0.1",
    "jupyterlab-execute-time>=3.3.0",
    "httpx2>=2.7.0",
    "setuptools>=82.0.1",
    "cython-lint>=0.21.0",
    "pytest-xdist>=3.8.0",
]

[build-system]
requires = ["setuptools>=65.5.1", "wheel", "Cython>=3.0.11", "scipy>=1.16.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["SymbolicDSGE*"]

[tool.setuptools.package-data]
"SymbolicDSGE" = ["py.typed"]
"SymbolicDSGE.ui" = ["_static/**/*"]
"SymbolicDSGE._ckernels" = ["**/*.pyx", "**/*.pxd", "**/*.pyi", "**/*.c", "**/*.h"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
python_files = ["test_*.py"]
addopts = "--import-mode=importlib"
markers = [
    "sr: tests that require the optional symbolic-regression dependency",
]

[tool.coverage.report]
# numba compiles @njit / @cfunc bodies to machine code, so coverage.py cannot
# trace lines inside them while JIT is active (which the runtime requires for
# dynamic cfunc generation). Excluding the decorated functions keeps the metric
# on line-traceable code; the native kernels are validated by their parity
# oracles and functional tests, not by line coverage.
exclude_also = [
    '^\s*@njit',
    '^\s*@cfunc',
]

[tool.cibuildwheel]
build = "cp311-* cp312-* cp313-* cp314-*"
# 64-bit only (drop 32-bit i686/win32). Skip musllinux: numba/llvmlite ship no
# musl wheels, so the dep chain builds llvmlite from source there and fails
# (needs LLVM) -- the package can't run on Alpine regardless, so don't ship
# unusable musl wheels. No -march=native anywhere (baseline ISA).
skip = "*_i686 *-win32 *-musllinux*"
# Validate each platform: confirm the wheel loads and the native kernels match
# the numba reference. All CPythons are built; runtime-test one per platform
# (the C is Python-version-agnostic, only the generated Cython glue differs) to
# bound the per-wheel dependency install.
test-requires = "pytest"
test-command = "python -m pytest {project}/tests/ckernels -q"
test-skip = "cp311-* cp312-*"
